--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,14 +42,41 @@
 							</span>
 						</div>
 					</div>
+					<div class="each-event">
+						<div class="event-image" style="background-image: url(https://s3-eu-west-1.amazonaws.com/tvoykosmos/imgs/02_09_14_laser1.jpg)"></div>
+						<div class="event-info-top">
+							<span>
+								<p>Это самое пиздатое в мире описание</p>
+							</span>
+						</div>
+						<div class="event-info">
+							<span>
+								<p>Это самое пиздатое в мире описание</p>
+							</span>
+						</div>
+					</div>
+					<div class="each-event">
+						<div class="event-image" style="background-image: url(https://s3-eu-west-1.amazonaws.com/tvoykosmos/imgs/02_09_14_laser1.jpg)"></div>
+						<div class="event-info-top">
+							<span>
+								<p>Это самое пиздатое в мире описание</p>
+							</span>
+						</div>
+						<div class="event-info">
+							<span>
+								<p>Это самое пиздатое в мире описание</p>
+							</span>
+						</div>
+					</div>
 				</div>
 			</div>
 			<div class="article">
-				<div class="article-image" style="background-image: url(https://s3-eu-west-1.amazonaws.com/tvoykosmos/imgs/02_09_14_laser1.jpg)">
+				<div class="article-image" style="background-image: url(http://i.space.com/images/i/000/041/418/iFF/klingon-approach-axanar.jpg?1408050537)">
+					<div class="fader"></div>
 					<span class="article-info">
-						<p>Обзор</p>
-						<p>Топ 10 кинорежиссеров снявших фильмы о космосе</p>
-						<p> Добавлено тогда то. Просмотров</p>
+						<p class="article-type">Обзор</p>
+						<p class="article-title">Топ 10 кинорежиссеров снявших фильмы о космосе</p>
+						<p class="article-misc"><span class="fa fa-eye"></span> <span>260</span></p>
 					</span>
 				</div>
 				
