--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -289,24 +289,25 @@ news.s22 .inner-container .text-container .description {
 	width: 100%;
 	height: 195px;
 }
-.events .each-event {
+.each-event {
 	width: 100%;
 	height: 175px;
 	text-align: center;
+	position: relative;
+	overflow: hidden;
 }
 .each-event .event-image {
 	display: inline-block;
 	background-position: center center;
 	background-size: cover;
-	width: 140px;
-	height: 100px;
+	width: 170px;
+	height: 120px;
 	margin: 0;
 	-webkit-transition: all .4s;
 	-moz-transition: all .4s;
 	transition: all .4s;
 	border-radius: 4px;
 	overflow: hidden;
-	
 }
 .each-event:hover .event-image {
 	height: 175px;
@@ -316,6 +317,8 @@ news.s22 .inner-container .text-container .description {
 	font-family: 'RobCondBold';
 	position: relative;
 	top: 0;
+	height: 60px;
+	line-height: 60px;
 	color: #000;
 	-webkit-transition: all .4s;
 	-moz-transition: all .4s;
