скрыта удалялка артиклов

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -346,7 +346,7 @@
 				<p>Автор: {{ art.author }}</p>
 				<p>Тип: {{ art.type_label }}</p>
 				<span class="button-block">
-					<button ng-click="deleteThing(art._id, 'articles')">Удалить</button>
+					<!-- <button ng-click="deleteThing(art._id, 'articles')">Удалить</button> -->
 					<button ng-click="loadToFormForUpdate(art, 'articles')">Редактировать</button>
 					<button><a href="/event/{{ art._id }}">Перейти в новость</a></button>
 				</span>	
