работа над страницей каждого события

--- a/views/content.ejs
+++ b/views/content.ejs
@@ -10,6 +10,7 @@
 <% block('title', post.title) -%>
 
 <% stylesheet("/build/css/content.css") -%>
+<% stylesheet("/build/css/content-columns.css") -%>
 
 <div id="fb-root"></div>
 
