полностью доделаны ивенты с самой вьюхой

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -5,6 +5,8 @@
 <% script("/build/js/admin.js") -%>
 <% script("/javascripts/directives/news_element.js") -%>
 <% script("/libs/moment/min/moment-with-locales.min.js") -%>
+
+<% stylesheet("/build/css/event-line.css") -%>
 <% stylesheet("/build/css/fonts.css") -%>
 <% stylesheet("/build/css/index.css") -%>
 <% stylesheet("/build/css/admin.css") -%>
