--- a/public/stylesheets/content.css
+++ b/public/stylesheets/content.css
@@ -1,3 +1,7 @@
+.page * {
+	color: #555;
+	font-family: 'RobCondLight', sans-serif;
+}
 .post .title-image {
 	position: relative;
 	border-radius: 2px;
