--- a/public/stylesheets/events.css
+++ b/public/stylesheets/events.css
@@ -1,6 +1,6 @@
 div.page .post {
 	width: 100%;
-	padding: 0;
+	padding: 0 10px ;
 }
 .events-column {
 	width: 50%;
@@ -15,13 +15,15 @@ div.page .post {
 .image {
 	background-size: cover;
 	background-position: center center;
+	border-radius: 4px;
+	overflow: hidden;
 	width: 75%;
 }
 .image img {
 	width: 100%;
 }
 .info {
-	padding: 0 15px;
+	padding: 0 0 0 10px;
 	width: 25%;
 }
 .info .title {
@@ -39,4 +41,20 @@ div.page .post {
 	padding-left: 5px;
 	line-height: 30px;
 	margin-bottom: 15px;
+}
+.other-mode > div.left {
+	width: 100%;
+}
+news.s11 {
+	width: 33.33333%;
+	height: 385px;
+}
+.article-and-news {
+	width: 75%;
+	float: left;
+}
+.article {
+	width: 66.66666%;
+	float: left;
+	padding: 10px;
 }
