--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -311,6 +311,7 @@ news.s22 .inner-container .text-container .description {
 }
 .article .fader {
 	position: absolute;
+	border-radius: inherit;
 	top: 0;right: 0;bottom: 0;left: 0;
 	background-color: rgba(0,0,0,.4);
 }
