--- a/public/stylesheets/content.css
+++ b/public/stylesheets/content.css
@@ -49,7 +49,7 @@
 	margin-top: 0;
 	left: 40px;
 	right: 40px;
-	padding: 3% 10px;
+	padding: 3% 0;
 	position: absolute;
 	text-align: center;
 	top: -62%;
