--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -261,7 +261,8 @@
 			<p class="labels">Заголовок события</p>
 			<input type="text" ng-model="events.title">
 			<p class="labels">Описание события</p>
-			<input type="text" ng-model="events.description">
+			<textarea type="text" ng-model="events.description">
+			</textarea>
 			<p class="labels">Картинка для превью</p>
 			<input type="text" ng-model="events.image_preview">
 			<p class="labels">Картинка фулл( икс на игрек )</p>
