--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,14 +39,16 @@
 				</div>
 			</div>
 			<div class="article">
-				<div class="article-image" style="background-image: url({{ last_article.image }})">
-					<div class="fader"></div>
-					<span class="article-info">
-						<p class="article-type">{{ last_article.type_label }}</p>
-						<p class="article-title">{{ last_article.title}}</p>
-						<p class="article-misc"><span class="fa fa-eye"></span> <span>{{ last_article.views }}</span></p>
-					</span>
-				</div>	
+				<a href="/article/{{ last_article._id }}">
+					<div class="article-image" style="background-image: url({{ last_article.image }})">
+						<div class="fader"></div>
+						<span class="article-info">
+							<p class="article-type">{{ last_article.type_label }}</p>
+							<p class="article-title">{{ last_article.title}}</p>
+							<p class="article-misc"><span class="fa fa-eye"></span> <span>{{ last_article.views }}</span></p>
+						</span>
+					</div>	
+				</a>
 			</div>
 		</div>
 		<div ng-repeat="block in feed_blocks"
