отлажена система ивентов и артиклов

--- a/views/contacts.ejs
+++ b/views/contacts.ejs
@@ -15,10 +15,10 @@
 		<p class="spec">Главный редактор</p>
 	</div>
 
-	<p>АДРЕС</p>
+	<!-- <p>АДРЕС</p>
 	<div>
 		<p class="spec">123060, ул. Маршала Соколовского, д.6</p>
-	</div>
+	</div> -->
 	
 </div>
 
