--- a/views/header.ejs
+++ b/views/header.ejs
@@ -15,7 +15,7 @@
 					<a class="tech" href="/?section=tech">технологии</a>
 				</div>
 			</div>
-			<div class="_regime" ng-click="toggle_news_type()">
+			<div class="_regime" ng-click="toggle_news_type()" ng-show="news_type">
 				<p class="usn regime">MODE</p>
 				<p class="usn type-name" ng-if="news_type=='normal'">НОРМАЛ</p>
 				<p class="usn type-name" ng-if="news_type=='special'">СПЕШЛ</p>
