--- a/views/event.ejs
+++ b/views/event.ejs
@@ -4,6 +4,9 @@
 	window.event_ = <%- JSON.stringify(event_) %>
 </script>
 
+<% block('meta', partial('meta-events')) -%>
+<% block('title', event_.title) -%>
+
 <% script("/libs/moment/min/moment-with-locales.min.js") -%>
 <% script("/javascripts/directives/news_element.js") -%>
 <% script("/build/js/share.js") -%>
@@ -14,9 +17,8 @@
 <% stylesheet("/build/css/index.css") -%>
 <% stylesheet("/build/css/content-columns.css") -%>
 <% stylesheet("/build/css/event-line.css") -%>
+<% stylesheet("/build/css/article-line.css") -%>
 <% stylesheet("/build/css/events.css") -%>
-<% block('meta', partial('meta-events')) -%>
-
 
 <div class="page" ng-controller="eventCtrl" ng-init="init()">
 	<article class="post">
@@ -46,13 +48,22 @@
 	<aside class="article-and-news">
 	
 		<div class="article">
-			<a href="/article/{{ last_article._id }}">
+			<div class="article-loader fa fa-cog fa-spin" ng-if="article_loading"></div>
+			<a ng-if="!article_loading" href="/article/{{ last_article._id }}">
 				<div class="article-image" style="background-image: url({{ last_article.image }})">
 					<div class="fader"></div>
-					<span class="article-info">
+					<span class="article-info-big">
 						<p class="article-type">{{ last_article.type_label }}</p>
-						<p class="article-title">{{ last_article.title}}</p>
-						<p class="article-misc"><span class="fa fa-eye"></span> <span>{{ last_article.views }}</span></p>
+						<p class="article-title">{{ last_article.title }}</p>
+						<p class="article-description">{{ last_article.description }}</p>
+						<div class="article-info">
+							<span>	
+								<p class="article-type">{{ last_article.type_label }}</p>
+								<p class="article-title">{{ last_article.title }}
+									<span class="article-slide-description">{{ last_article.description }}</span>
+								</p>
+							</span>
+						</div>
 					</span>
 				</div>	
 			</a>
