--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,7 @@
 <% stylesheet("/libs/owl-carousel/owl-carousel/owl.carousel.css") -%>
 <% stylesheet("/libs/owl-carousel/owl-carousel/owl.theme.css") -%>
 <% stylesheet("/build/css/index.css") -%>
+<% stylesheet("/build/css/article-line.css") -%>
 <% stylesheet("/build/css/event-line.css") -%>
 <% stylesheet("/libs/fontawesome/css/font-awesome.min.css") -%>
 <% script("/build/js/index_page.js") -%>
@@ -39,13 +40,22 @@
 				</div>
 			</div>
 			<div class="article">
-				<a href="/article/{{ last_article._id }}">
+				<div class="article-loader fa fa-cog fa-spin" ng-if="article_loading"></div>
+				<a ng-if="!article_loading" href="/article/{{ last_article._id }}">
 					<div class="article-image" style="background-image: url({{ last_article.image }})">
 						<div class="fader"></div>
-						<span class="article-info">
+						<span class="article-info-big">
 							<p class="article-type">{{ last_article.type_label }}</p>
-							<p class="article-title">{{ last_article.title}}</p>
-							<p class="article-misc"><span class="fa fa-eye"></span> <span>{{ last_article.views }}</span></p>
+							<p class="article-title">{{ last_article.title }}</p>
+							<p class="article-description">{{ last_article.description }}</p>
+							<div class="article-info">
+								<span>	
+									<p class="article-type">{{ last_article.type_label }}</p>
+									<p class="article-title">{{ last_article.title }}
+										<span class="article-slide-description">{{ last_article.description }}</span>
+									</p>
+								</span>
+							</div>
 						</span>
 					</div>	
 				</a>
