--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
 
 <div ng-app="tvoyKosmos" ng-controller="Index" ng-init="init()">	
 	<div class="feed">
-		<div class="block padded">
+		<!-- <div class="block padded">
 			<div class="events">
 				<div id="slider" 
 					 class="owl-carousel">
@@ -62,7 +62,7 @@
 					</div>	
 				</a>
 			</div>
-		</div>
+		</div> -->
 		<div ng-repeat="block in feed_blocks"
 			 class="block">
 			<news class="anim" 
