исправлен баг в админке

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -365,7 +365,7 @@
 				<span class="button-block">
 					<!-- <button ng-click="deleteThing(art._id, 'articles')">Удалить</button> -->
 					<button ng-click="loadToFormForUpdate(art, 'articles')">Редактировать</button>
-					<button><a href="/event/{{ art._id }}">Перейти в новость</a></button>
+					<button><a href="/article/{{ art._id }}">Перейти в новость</a></button>
 				</span>	
 			</div>
 		</div>
