изменены неверные названия сущностей в начале новости

--- a/views/article.ejs
+++ b/views/article.ejs
@@ -34,7 +34,7 @@
 					<h1><span><%- article.title %></span></h1>
 					<p><%- article.description %></p>
 					<div class="info-panel">
-						<span class="date">Новость опубликована {{ article.date }}</span>
+						<span class="date">Статья опубликована {{ article.date }}</span>
 						<span class="views">
 							<span class="fa fa-eye"></span>
 							<span class="view-count"><%- article.views %></span>
