--- a/views/event.ejs
+++ b/views/event.ejs
@@ -27,7 +27,7 @@
 		</div>
 		<div class="info">
 			<p class="title"><%- event_.title %></p>
-			<p class='date gray'>Выложено {{ event_.date }}</p>
+			<p class='date gray'>Опубликовано {{ event_.date }}</p>
 			<p class="description"><%- event_.description %></p>
 
 			<div class="other-mode">
