--- a/views/article.ejs
+++ b/views/article.ejs
@@ -26,11 +26,11 @@
 		<div class="title-image">
 			<img src="<%- article.image %>">
 			<div class="black-postphoto"></div>
-			<span> 
+			<span class="sel_non"> 
 				<span><%- article.title %></span>
 				<p><%- article.description %></p>
 				<div class="info-panel"></div>
-				<span class="title">
+				<span class="title sel_ini">
 					<h1><span><%- article.title %></span></h1>
 					<p><%- article.description %></p>
 					<div class="info-panel">
