--- a/views/base.ejs
+++ b/views/base.ejs
@@ -41,6 +41,18 @@
 		*[ng-click] {
 			cursor: pointer;
 		}
+		.sel_non {
+			-webkit-user-select: none;
+			-moz-user-select: none;
+			user-select: none;
+			cursor: default;
+		}
+		.sel_ini {
+			-webkit-user-select: initial;
+			-moz-user-select: initial;
+			user-select: initial;
+			cursor: initial;
+		}
 	</style>
 	
 	<link rel="icon" type="image/png" href="/images/tk.png" sizes="32x32">
