--- a/views/base.ejs
+++ b/views/base.ejs
@@ -24,7 +24,7 @@
 
 	<style>
 		html, body {
-			height: 100%;
+			/*height: 100%;*/
 			width: 100%;
 			background-color: #fff;
 		}
@@ -37,6 +37,12 @@
 			z-index: 1;
 			border-top: 4px solid #FFB52E;
 			border-bottom: 4px solid #FFB52E;
+		}
+		.tk_color {
+			color: #FFB52E !important;
+		}
+		.tk_bg {
+			background-color: #FFB52E !important;
 		}
 		*[ng-click] {
 			cursor: pointer;
