--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -23,12 +23,18 @@
 	text-align: left;
 }
 .top .sections {
-	height: 50px;
+	height: 40px;
+	line-height: 40px;
 	font-size: 25px;
 	font-family: 'RobCondBold';
 }
+.sections._logo {
+	height: 60px;
+	line-height: 60px;
+	letter-spacing: -.15ex;
+}
 .sections._logo a {
-	font-size: 50px;
+	font-size: 63px;
 }
 .sections._logo a:hover {
 	color: #fff !important;
