--- a/views/header.ejs
+++ b/views/header.ejs
@@ -7,7 +7,7 @@
 		<span>
 			<div class="_nav">	
 				<div class="sections _logo">
-					<a href="/">ТВОЙ КОСМОС</a>
+					<a href="/"><span class="tk_color">твой</span>космос</a>
 				</div>
 				<div class="sections">
 					<a class="space" href="/?section=space">космос</a>
